<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatusActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-47dp">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            app:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rowCount="4"
            app:useDefaultMargins="true">

            <TextView
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="0" />

            <EditText
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="0" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="1" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_column="1"
                app:layout_row="1">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女性"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="男性"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="2"/>

            <EditText
                android:id="@+id/city"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="2" />

            <EditText
                android:id="@+id/town"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/town"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="2"
                android:layout_marginLeft="110dp"/>

            <TextView
                android:id="@+id/taste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taste"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="3" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rowCount="3"
                app:useDefaultMargins="true"
                app:layout_column="1"
                app:layout_row="3">

                <CheckBox
                    android:id="@+id/food1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="蔥"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_column="0"
                    app:layout_row="0"/>

                <CheckBox
                    android:id="@+id/food2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="蒜"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_column="1"
                    app:layout_row="0"/>

                <CheckBox
                    android:id="@+id/food3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="洋蔥"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_column="0"
                    app:layout_row="1"/>

                <CheckBox
                    android:id="@+id/food4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="薑"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_column="1"
                    app:layout_row="1"/>

                <CheckBox
                    android:id="@+id/food5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="香菜"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_column="0"
                    app:layout_row="2"/>

                <CheckBox
                    android:id="@+id/food6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="芹菜"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_column="1"
                    app:layout_row="2"/>

            </androidx.gridlayout.widget.GridLayout>

        </androidx.gridlayout.widget.GridLayout>

        <Button
            android:id="@+id/s_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="確定"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            app:backgroundTint="#6FC0E4" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>