<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-47dp">

        <LinearLayout
            android:id="@+id/LinearLayout_v2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:shadowColor="#FFFFFF"
                android:textColorHighlight="#A4EBF4"
                android:textColorLink="#FF03DAC5"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input"
                android:inputType="textPassword"
                android:textSize="30sp"
                android:selectAllOnFocus="true"
                android:shadowColor="#FFFFFF"
                android:textColorHighlight="#A4EBF4"
                android:textColorLink="#FF03DAC5"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/userGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="50dp">

            <RadioButton
                android:id="@+id/cus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="顧客"
                android:textSize="23sp"/>

            <RadioButton
                android:id="@+id/res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="餐廳"
                android:textSize="23sp"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/LinearLayout_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                android:textSize="27sp"
                app:backgroundTint="#6FC0E4" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/sign_in"
                android:textSize="27sp"
                app:backgroundTint="#9C7ADA" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>